--- a/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
@@ -1,15 +1,18 @@
 ---
 - name: set fact allow_downgrade to no
   set_fact: allow_downgrade=no
+  tags: elasticsearch
 
 - name: set fact allow_downgrade to yes
   set_fact: allow_downgrade=yes
   when: es_allow_downgrades
+  tags: elasticsearch
 
 - name: Ensure libselinux-python on CentOS 6.x
   become: yes
   yum: name=libselinux-python state=present update_cache=yes
   when: ( ansible_distribution == "CentOS" ) and ( ansible_distribution_major_version == "6" )
+  tags: elasticsearch
 
 - name: RedHat - add Elasticsearch repo
   become: yes
@@ -17,6 +20,7 @@
     src: 'elasticsearch.repo'
     dest: '/etc/yum.repos.d/elasticsearch-{{ es_repo_name }}.repo'
   when: es_use_repository
+  tags: elasticsearch
 
 - name: RedHat - remove unused Elasticsearch repo
   become: yes
@@ -24,16 +28,19 @@
     path: '/etc/yum.repos.d/elasticsearch-{{ es_other_repo_name }}.repo'
     state: absent
   when: es_use_repository
+  tags: elasticsearch
 
 - name: RedHat - include versionlock
   include: elasticsearch-RedHat-version-lock.yml
   when: es_version_lock
+  tags: elasticsearch
 
 - name: RedHat - Remove the other elasticsearch package if switching between OSS and standard
   become: yes
   yum:
     name: '{{ es_other_package_name }}'
     state: 'absent'
+  tags: elasticsearch
 
 - name: RedHat - Install Elasticsearch
   become: yes
@@ -50,6 +57,7 @@
   delay: 10
   environment:
     ES_PATH_CONF: "/etc/elasticsearch"
+  tags: elasticsearch
 
 - name: RedHat - Install Elasticsearch from url
   become: yes
@@ -57,3 +65,4 @@
   when: not es_use_repository
   register: elasticsearch_install_from_package
   notify: restart elasticsearch
+  tags: elasticsearch
