--- a/roles/elasticsearch/tasks/elasticsearch-Debian.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-Debian.yml
@@ -2,13 +2,16 @@
 
 - name: set fact force_install to no
   set_fact: force_install=no
+  tags: elasticsearch
 
 - name: set fact force_install to yes
   set_fact: force_install=yes
   when: es_allow_downgrades
+  tags: elasticsearch
 
 - name: Gracefully stop and remove elasticsearch package if switching between OSS and standard
   become: yes
+  tags: elasticsearch
   block:
   - name: Check if the elasticsearch package is installed
     shell: "dpkg-query -W -f'${Status}' {{ es_other_package_name }}"
@@ -33,6 +36,7 @@
 - name: Install Elasticsearch repository
   when: es_use_repository
   become: yes
+  tags: elasticsearch
   block:
   - name: Debian - Install apt-transport-https to support https APT downloads
     apt:
@@ -68,14 +72,17 @@
   notify: restart elasticsearch
   environment:
     ES_PATH_CONF: "/etc/elasticsearch"
+  tags: elasticsearch
 
 - name: Debian - Include versionlock
   include: elasticsearch-Debian-version-lock.yml
   when: es_version_lock
+  tags: elasticsearch
 
 - name: Debian - Download elasticsearch from url
   get_url: url={% if es_custom_package_url is defined %}{{ es_custom_package_url }}{% else %}{{ es_package_url }}-{{ es_version }}.deb{% endif %} dest=/tmp/elasticsearch-{{ es_version }}.deb validate_certs=no
   when: not es_use_repository
+  tags: elasticsearch
 
 - name: Debian - Ensure elasticsearch is installed from downloaded package
   become: yes
@@ -85,3 +92,4 @@
   notify: restart elasticsearch
   environment:
     ES_PATH_CONF: "/etc/elasticsearch"
+  tags: elasticsearch
