--- a/roles/elasticsearch/tasks/elasticsearch-config.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-config.yml
@@ -10,6 +10,7 @@
     - "{{ es_log_dir }}"
     - "{{ es_conf_dir }}"
     - "{{ es_data_dirs }}"
+  tags: elasticsearch
 
 #Copy the config template
 - name: Copy Configuration File
@@ -17,20 +18,24 @@
   template: src=elasticsearch.yml.j2 dest={{ es_conf_dir }}/elasticsearch.yml owner={{ es_user }} group={{ es_group }} mode=0644 force=yes
   register: system_change
   notify: restart elasticsearch
+  tags: elasticsearch
 
 #Copy the default file
 - name: Copy Default File
   become: yes
   template: src=elasticsearch.j2 dest={{ default_file }} mode=0644 force=yes
   notify: restart elasticsearch
+  tags: elasticsearch
 
 #Copy the logging.yml
 - name: Copy log4j2.properties File
   become: yes
   template: src={{es_config_log4j2}} dest={{ es_conf_dir }}/log4j2.properties owner={{ es_user }} group={{ es_group }} mode=0644 force=yes
   notify: restart elasticsearch
+  tags: elasticsearch
 
 - name: Copy jvm.options File
   become: yes
   template: src=jvm.options.j2 dest={{ es_conf_dir }}/jvm.options owner={{ es_user }} group={{ es_group }} mode=0644 force=yes
   notify: restart elasticsearch
+  tags: elasticsearch
