--- a/roles/elasticsearch/tasks/elasticsearch-parameters.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-parameters.yml
@@ -3,15 +3,18 @@
 - name: fail when es_proxy_port is not defined or is blank
   fail: msg="es_proxy_port must be specified and cannot be blank when es_proxy_host is defined"
   when: (es_proxy_port is not defined or es_proxy_port == '') and (es_proxy_host is defined and es_proxy_host != '')
+  tags: elasticsearch
 
 - name: debug message
   debug: msg="WARNING - It is recommended you specify the parameter 'http.port'"
   when: es_config['http.port'] is not defined
+  tags: elasticsearch
 
 #If the user attempts to lock memory they must specify a heap size
 - name: fail when heap size is not specified when using memory lock
   fail: msg="If locking memory with bootstrap.memory_lock a heap size must be specified"
   when: es_config['bootstrap.memory_lock'] is defined and es_config['bootstrap.memory_lock'] == True and es_heap_size is not defined
+  tags: elasticsearch
 
 #Check if working with security we have an es_api_basic_auth_username and es_api_basic_auth_username - otherwise any http calls wont work
 - name: fail when api credentials are not declared when using security
@@ -20,15 +23,19 @@
     - es_enable_xpack and "security" in es_xpack_features
     - es_api_basic_auth_username is not defined
     - es_api_basic_auth_password is not defined
+  tags: elasticsearch
 
 - name: set fact file_reserved_users
   set_fact: file_reserved_users={{ es_users.file.keys() | intersect (reserved_xpack_users) }}
   when: es_users is defined and es_users.file is defined and (es_users.file.keys() | length > 0) and (es_users.file.keys() | intersect (reserved_xpack_users) | length > 0)
+  tags: elasticsearch
 
 - name: fail when changing users through file realm
   fail:
      msg: "ERROR: INVALID CONFIG - YOU CANNOT CHANGE RESERVED USERS THROUGH THE FILE REALM. THE FOLLOWING CANNOT BE CHANGED: {{file_reserved_users}}. USE THE NATIVE REALM."
   when: file_reserved_users | default([]) | length > 0
+  tags: elasticsearch
 
 - name: set fact m_lock_enabled
   set_fact: m_lock_enabled={{ es_config['bootstrap.memory_lock'] is defined and es_config['bootstrap.memory_lock'] == True }}
+  tags: elasticsearch
