--- a/roles/elasticsearch/tasks/elasticsearch.yml
+++ b/roles/elasticsearch/tasks/elasticsearch.yml
@@ -3,11 +3,14 @@
 - name: Include optional user and group creation.
   when: (es_user_id is defined) and (es_group_id is defined)
   include: elasticsearch-optional-user.yml
+  tags: elasticsearch
 
 - name: Include specific Elasticsearch
   include: elasticsearch-Debian.yml
   when: ansible_os_family == 'Debian'
+  tags: elasticsearch
 
 - name: Include specific Elasticsearch
   include: elasticsearch-RedHat.yml
   when: ansible_os_family == 'RedHat'
+  tags: elasticsearch
