--- a/roles/elasticsearch/tasks/snapshot-release.yml
+++ b/roles/elasticsearch/tasks/snapshot-release.yml
@@ -5,18 +5,22 @@
 - name: detect if we need the .deb or .rpm
   set_fact:
     package_type: "{{ 'deb' if (ansible_os_family == 'Debian') else 'rpm' }}"
+  tags: elasticsearch
 
 - name: get the minor version
   set_fact:
     minor_version: "{{ es_version.split('.')[0:2] | join('.')}}"
+  tags: elasticsearch
 
 - name: set the package_name
   set_fact:
     package_name: "{{ es_package_name + '-' + es_version + '-SNAPSHOT.' + package_type }}"
+  tags: elasticsearch
 
 - name: generate the artifacts url
   set_fact:
     artifacts_url: "{{ 'https://artifacts-api.elastic.co/v1/search/' + minor_version + '/' + package_name }}"
+  tags: elasticsearch
 
 - name: get latest snapshot build
   uri:
@@ -28,28 +32,31 @@
   ignore_errors: true
   until: "'status' in snapshots and snapshots.status == 200"
   check_mode: no
+  tags: elasticsearch
 
 - name: use the custom package url instead of the repository
   set_fact:
     es_custom_package_url: "{{ snapshots.json['packages'][package_name]['url'] }}"
     es_use_repository: false
+  tags: elasticsearch
 
 - name: set snapshot urls for es_plugins when it is defined
   when: es_plugins is defined
+  tags: elasticsearch
   block:
   - name: split up the snapshot url so we can create the plugin url
     set_fact:
       split_url: "{{ es_custom_package_url.split('/') }}"
-  
+
   - name: set base plugin url
     set_fact:
       plugin_url: "{{ split_url[0] + '//' + split_url[2:5]|join('/') + '/elasticsearch-plugins/'}}"
-  
+
   - name: create es_plugins with the snapshot url
     set_fact:
       es_plugins_temp: "{{ es_plugins_temp|default([]) + [{'plugin': item.plugin, 'url': plugin_url + item.plugin + '/' + item.plugin + '-' + es_version + '-SNAPSHOT.zip'}] }}"
     with_items: "{{ es_plugins }}"
-  
+
   - name: override the original es_plugins with the snapshot version
     set_fact:
       es_plugins: "{{ es_plugins_temp }}"
