--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -11,8 +11,7 @@ mysql_root_password: root
 ###################################################
 ###   MONGODB
 ###################################################
-# Package name to use for Ubuntu
-mongodb_package: mongodb
+mongodb_package: mongodb                        # Package name to use for Ubuntu
 mongodb_version: "3.6"
 
 mongodb_net_bindip: 127.0.0.1                    # Comma separated list of ip addresses to listen on
