--- a/roles/mongodb/tasks/install.redhat.yml
+++ b/roles/mongodb/tasks/install.redhat.yml
@@ -3,11 +3,13 @@
 - name: Establish some role-related facts
   set_fact:
     mongodb_major_version: "{{ mongodb_version[0:3] }}"
+  tags: mongodb
 
 - name: Install EPEL release repository
   package:
     name: epel-release
     state: present
+  tags: mongodb
 
 - name: Add YUM repository
   template:
@@ -18,22 +20,26 @@
   loop_control:
     loop_var: version_item
   when: mongodb_package == 'mongodb-org'
+  tags: mongodb
 
 - name: Install MongoDB package
   yum:
     name: "{{ mongodb_package }}{% if (mongodb_version | length > 3) %}={{ mongodb_version }}{% endif %}"
     state: "{{ mongodb_package_state }}"
+  tags: mongodb
 
 - name: Install numactl package
   yum:
     name: numactl
     state: present
+  tags: mongodb
 
 - name: Install PyMongo package
   yum:
     name: python-pymongo
     state: present
   when: not mongodb_pymongo_from_pip
+  tags: mongodb
 
 - name: Install PIP
   yum:
@@ -41,6 +47,7 @@
       - python-devel
       - python-pip
   when: mongodb_pymongo_from_pip | bool
+  tags: mongodb
 
 - name: Install PyMongo from PIP
   pip:
@@ -48,3 +55,4 @@
     state: "{{ mongodb_pymongo_pip_version is defined | ternary('present', 'latest') }}"
     version: "{{ mongodb_pymongo_pip_version | default(omit) }}"
   when: mongodb_pymongo_from_pip | bool
+  tags: mongodb
