--- a/inventories/all-in-one/group_vars/indexservers.yml
+++ b/inventories/all-in-one/group_vars/indexservers.yml
@@ -1,4 +1,6 @@
 es_version: "6.6.2"
-es_data_dirs: "/opt/SWEAGLE/elasticsearch"
+es_data_dirs:
+  - "/opt/SWEAGLE/elasticsearch"
 es_config:
   cluster.name: "SWEAGLE_cluster"
+es_log_dir: "/var/log/elasticsearch"
