--- a/inventories/all-in-one/group_vars/indexservers.yml
+++ b/inventories/all-in-one/group_vars/indexservers.yml
@@ -1,6 +1,10 @@
 es_version: "6.6.2"
 es_data_dirs:
-  - "/opt/SWEAGLE/elasticsearch"
+  - "{{ sweagle_installation_folder }}/elasticsearch"
 es_config:
-  cluster.name: "SWEAGLE_cluster"
+  cluster.name: "{{ sweagle_elasticsearch_cluster }}"
+  discovery.seed_hosts: "localhost:9300"
+  http.port: 9200
+  transport.port: {{ sweagle_elasticsearch_transport_port }}
 es_log_dir: "/var/log/elasticsearch"
+es_api_port: 9200
