--- a/inventories/all-in-one/group_vars/indexservers.yml
+++ b/inventories/all-in-one/group_vars/indexservers.yml
@@ -3,8 +3,8 @@ es_data_dirs:
   - "{{ sweagle_installation_folder }}/elasticsearch"
 es_config:
   cluster.name: "{{ sweagle_elasticsearch_cluster }}"
-  discovery.seed_hosts: "localhost:9300"
+  discovery.seed_hosts: "localhost:{{ sweagle_elasticsearch_transport_port }}"
   http.port: 9200
-  transport.port: {{ sweagle_elasticsearch_transport_port }}
+  transport.port: "{{ sweagle_elasticsearch_transport_port }}"
 es_log_dir: "/var/log/elasticsearch"
 es_api_port: 9200
