replace wheel by sudo

--- a/roles/sweagle-core/tasks/main.yml
+++ b/roles/sweagle-core/tasks/main.yml
@@ -3,7 +3,7 @@
   user:
     name: sweagle
     state: present
-    groups: wheel
+    groups: sudo
     system: yes
   tags: [ sweagle-core, sweagle, system ]
 
