--- a/roles/sweagle-core/tasks/main.yml
+++ b/roles/sweagle-core/tasks/main.yml
@@ -3,14 +3,15 @@
   user:
     name: sweagle
     state: present
-    groups: sudo
+    groups: wheel
     system: yes
   become: true
+  become_user: root
   tags: [ sweagle-core, sweagle, system ]
 
-- name: Create Sweagle installation folder "{{ sweagle_installation_folder }}"
+- name: Create Sweagle installation folder "{{ sweagle_core_installation_folder }}"
   file:
-    path: "{{ sweagle_installation_folder }}"
+    path: "{{ sweagle_core_installation_folder }}"
     state: directory
     owner: "{{ sweagle_system_user }}"
     group: "{{ sweagle_system_group }}"
@@ -26,30 +27,30 @@
 - name: copy content to installation folder
   synchronize:
     src: "/tmp/{{ sweagle_version }}/full/"
-    dest: "{{ sweagle_installation_folder }}"
+    dest: "{{ sweagle_core_installation_folder }}"
   delegate_to: "{{ inventory_hostname }}"
   tags: [ sweagle-core, sweagle ]
 
 - name: configure sweagle application.yml
   template:
     src: "{{ sweagle_version }}/application.yml.j2"
-    dest: "{{ sweagle_installation_folder }}/bin/core/application.yml"
+    dest: "{{ sweagle_core_installation_folder }}/bin/core/application.yml"
   tags: [ sweagle-core, sweagle ]
 
-- name: set correct version in "{{ sweagle_installation_folder }}/appRelease.settings"
+- name: set correct version in "{{ sweagle_core_installation_folder }}/appRelease.settings"
   replace:
-    path: "{{ sweagle_installation_folder }}/scripts/config/appRelease.settings"
+    path: "{{ sweagle_core_installation_folder }}/scripts/config/appRelease.settings"
     regexp: '\d+\.\d+\.\d+'
     replace: "{{ sweagle_version }}"
   tags: [ sweagle-core, sweagle ]
 
-- name: make shell scripts in "{{ sweagle_installation_folder }}/scripts" executable
-  shell: "chmod +x {{sweagle_installation_folder }}/scripts/*.sh"
+- name: make shell scripts in "{{ sweagle_core_installation_folder }}/scripts" executable
+  shell: "chmod +x {{sweagle_core_installation_folder }}/scripts/*.sh"
   tags: [ sweagle-core, sweagle ]
 
-- name: set ownership in "{{ sweagle_installation_folder }}"
+- name: set ownership in "{{ sweagle_core_installation_folder }}"
   file:
-    dest: "{{ sweagle_installation_folder }}"
+    dest: "{{ sweagle_core_installation_folder }}"
     owner: "{{ sweagle_system_user }}"
     group: "{{ sweagle_system_group }}"
     recurse: yes
