--- a/roles/sweagle-core/tasks/main.yml
+++ b/roles/sweagle-core/tasks/main.yml
@@ -1,7 +1,33 @@
 ---
+- name: Make sure we have a 'wheel' group
+  group:
+    name: wheel
+    state: present
+  become: true
+  become_user: root
+  tags: [ sweagle-core, sweagle, system ]
+
+#- name: Allow 'wheel' group to have passwordless sudo
+#  lineinfile:
+#    dest: /etc/sudoers
+#    state: present
+#    regexp: '^%wheel'
+#    line: '%wheel ALL=(ALL) NOPASSWD: ALL'
+#    validate: 'visudo -cf %s'
+#  become: true
+#  become_user: root
+#  tags: [ sweagle-core, sweagle, system ]
+
+- name: Create SWEAGLE system group
+  group:
+    name: "{{ sweagle_system_group }}"
+    state: present
+  become: true
+  tags: [ sweagle-core, sweagle, system ]
+
 - name: Create sweagle user "{{sweagle_system_user }}"
   user:
-    name: sweagle
+    name: "{{sweagle_system_user }}"
     state: present
     groups: wheel
     system: yes
