--- a/roles/sweagle-core/tasks/main.yml
+++ b/roles/sweagle-core/tasks/main.yml
@@ -70,8 +70,14 @@
     replace: "{{ sweagle_version }}"
   tags: [ sweagle-core, sweagle ]
 
+#- name: make shell scripts in "{{ sweagle_core_installation_folder }}/scripts" executable
+#  shell: "chmod +x {{sweagle_core_installation_folder }}/scripts/*.sh"
+#  tags: [ sweagle-core, sweagle ]
+
 - name: make shell scripts in "{{ sweagle_core_installation_folder }}/scripts" executable
-  shell: "chmod +x {{sweagle_core_installation_folder }}/scripts/*.sh"
+  file:
+    dest: "{{ sweagle_core_installation_folder }}/scripts/*.sh"
+    mode: a+x
   tags: [ sweagle-core, sweagle ]
 
 - name: set ownership in "{{ sweagle_core_installation_folder }}"
