--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -64,6 +64,12 @@
     dest: "{{ sweagle_installation_folder }}/bin/core/application.yml"
   tags: [ sweagle-core, sweagle ]
 
+- name: configure SWEAGLE core appConfig.settings
+  template:
+    src: "{{ sweagle_version }}/appConfig.settings.j2"
+    dest: "{{ sweagle_installation_folder }}/scripts/config/appConfig.settings"
+  tags: [ sweagle-core, sweagle ]
+
 - name: configure SWEAGLE scriptexecutor application.yml
   template:
     src: "{{ sweagle_version }}/scriptexecutor-application.yml.j2"
