--- a/roles/sweagle/default/main.yml
+++ b/roles/sweagle/default/main.yml
@@ -2,11 +2,15 @@
 sweagle_system_user: sweagle
 sweagle_system_group: sweagle
 
-sweagle_installation_folder: /opt/SWEAGLE/core
-sweagle_core_port: 8081
-
 sweagle_version:
+sweagle_installation_folder: /opt/SWEAGLE/core
+sweagle_create_services: true
+sweagle_license_key:
+
+sweagle_core_port: 8081
+sweagle_taskrunner_port: 8082
+sweagle_scriptexecutor_port: 8083
+
 sweagle_service_name: sweagle
 sweagle_heap: 512m
 sweagle_tenant: poc
-sweagle_license_key:
