--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -106,3 +106,11 @@
     group: "{{ sweagle_system_group }}"
     recurse: yes
   tags: [ sweagle-core, sweagle ]
+
+- name: create SWEAGLE core services
+  include: create-services.yml
+  when: sweagle_create_services
+  tags: [ sweagle, sweagle-taskrunner, sweagle-core, sweagle-scriptexecutor ]
+
+#  shell: "chmod +x {{sweagle_installation_folder }}/scripts/*.sh"
+#  tags: [ sweagle-core, sweagle ]
