--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -40,6 +40,6 @@
     command: vault operator init
     register: keys
     environment:
-      VAULT_ADDR: "http://127.0.0.1:8200"
+      VAULT_ADDR: "http://127.0.0.1:{{ vault_port }}"
 
   - debug: msg="{{ keys }}"
