--- a/clean-all.yml
+++ b/clean-all.yml
@@ -4,7 +4,7 @@
     - name: Stop and disable all services"
       service:
         name: "{{ item }}"
-        state: stoped
+        state: stopped
         enabled: no
       with_items:
         - elasticsearch
