--- a/clean-all.yml
+++ b/clean-all.yml
@@ -16,6 +16,8 @@
         - sweagleTaskRunner
         - vault
       become: true
+      ignore_errors: yes
+      tags: uninstall
 
     - name: Remove all installed packages
       package:
