--- a/roles/mongodb/tasks/install.debian.yml
+++ b/roles/mongodb/tasks/install.debian.yml
@@ -83,6 +83,7 @@
 - name: Add symlink for systemd
   file: src=/lib/systemd/system/mongodb.service dest=/etc/systemd/system/multi-user.target.wants/mongodb.service state=link
   when: ansible_service_mgr == "systemd"
+  become: true
   notify:
     - reload systemd
   tags: mongodb
