--- a/roles/sweagle/tasks/create-services.yml
+++ b/roles/sweagle/tasks/create-services.yml
@@ -1,11 +1,11 @@
 ---
 - name: Create service for SWEAGLE scriptexecutor
-  shell: " {{ sweagle_installation_folder }}/scripts/createService.sh sweagleScriptExecutor {{ sweagle_installation_folder }}/bin/core core-{{ sweagle_version }}.jar 4000m"
+  shell: " {{ sweagle_installation_folder }}/scripts/createService.sh sweagleScriptExecutor {{ sweagle_installation_folder }}/bin/scriptExecutor scriptExecutor-{{ sweagle_version }}.jar 2000m"
   become: true
   tags: [ sweagle, sweagle-scriptexecutor ]
 
 - name: Create service for SWEAGLE core
-  shell: " {{ sweagle_installation_folder }}/scripts/createService.sh sweagleCore {{ sweagle_installation_folder }}/bin/scriptExecutor scriptExecutor-{{ sweagle_version }}.jar 2000m"
+  shell: " {{ sweagle_installation_folder }}/scripts/createService.sh sweagleCore {{ sweagle_installation_folder }}/bin/core core-{{ sweagle_version }}.jar 4000m"
   become: true
   tags: [ sweagle, sweagle-core ]
 
