--- a/clean-all.yml
+++ b/clean-all.yml
@@ -59,6 +59,12 @@
       ignore_errors: yes
       tags: uninstall
 
+## remove files
+#  /etc/systemd/system/sweagle*
+#  /usr/bin/mongo*
+#  /usr/bin/mysql*
+#  /usr/bin/vault*
+
     - name: Finish message
       debug:
         msg: "It is recommended to start an auto-remove of useless dependent libraries with sudo apt-get autoremove."
