--- a/roles/sweagle/tasks/create-services.yml
+++ b/roles/sweagle/tasks/create-services.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create service for SWEAGLE scriptexecutor
-  shell: "{{ sweagle_installation_folder }}/scripts/createService.sh sweagleScriptExecutor {{ sweagle_installation_folder }}/bin/scriptExecutor scriptExecutor-{{ sweagle_version }}.jar 2000m"
+  shell: "{{ sweagle_installation_folder }}/scripts/createService.sh sweagleScriptExecutor {{ sweagle_installation_folder }}/bin/scriptExecutor script-executor-{{ sweagle_version }}.jar 2000m"
   become: true
   tags: [ sweagle, sweagle-scriptexecutor ]
 
