--- a/all-in-one-install.yml
+++ b/all-in-one-install.yml
@@ -18,6 +18,10 @@
   roles:
     - mysql
     - mongodb
+## check mongo connection
+#mongo -u staticTreeUser -p staticTreePassword localhost:27017/sweagle
+
+
 
 - hosts: indexservers
   roles:
