--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -17,7 +17,7 @@ mongodb_version: "3.6"
 
 mongodb_net_bindip: 127.0.0.1                    # Comma separated list of ip addresses to listen on
 mongodb_net_port: "{{ sweagle_mongo_port }}"
-mongodb_security_authorization: "enabled"
+mongodb_security_authorization: "disabled"
 
 mongodb_storage_dbpath: "/opt/mongodb/data"
 
