--- a/roles/mongodb/tasks/configure-sweagle.yml
+++ b/roles/mongodb/tasks/configure-sweagle.yml
@@ -8,7 +8,6 @@
 - name: Get list of MongoDB user
   shell: mongo "{{ sweagle_mongo_db }}" --eval 'db.getUsers()'
   register: mongo_users
-  ignore_errors: true
   tags: [ mongodb, sweagle, sweagle-mongodb ]
 
 #- debug: var=mongo_users
@@ -51,5 +50,6 @@
   template:
     src: "sweagle-mongod.conf.j2"
     dest: /etc/mongod.conf
+  become: true
   tags: [ mongodb, sweagle, sweagle-mongodb ]
   notify: mongodb reload
