--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -20,6 +20,8 @@ mongodb_net_port: "{{ sweagle_mongo_port }}"
 mongodb_security_authorization: "disabled"
 
 mongodb_storage_dbpath: "/opt/mongodb/data"
+mongodb_systemlog_path: "/opt/mongodb/log/{{ mongodb_daemon_name }}.log"   # Log file to send write to instead of stdout
+
 
 mongodb_user_admin_name: sweagle
 mongodb_user_admin_password: sweagle
