--- a/roles/mongodb/tasks/configure-sweagle.yml
+++ b/roles/mongodb/tasks/configure-sweagle.yml
@@ -46,10 +46,10 @@
   tags: [ mongodb, sweagle, sweagle-mongodb ]
   when: user_output.rc != 0
 
-- name: Copy SWEAGLE mongod.conf
-  template:
-    src: "mongod.conf-sweagle.j2"
-    dest: /etc/mongod.conf
-  become: true
-  tags: [ mongodb, sweagle, sweagle-mongodb ]
-  notify: mongodb restart
+#- name: Copy SWEAGLE mongod.conf
+#  template:
+#    src: "mongod.conf-sweagle.j2"
+#    dest: /etc/mongod.conf
+#  become: true
+#  tags: [ mongodb, sweagle, sweagle-mongodb ]
+#  notify: mongodb restart
