--- a/inventories/all-in-one/group_vars/indexservers.yml
+++ b/inventories/all-in-one/group_vars/indexservers.yml
@@ -6,5 +6,5 @@ es_config:
   discovery.seed_hosts: "localhost:{{ sweagle_elasticsearch_transport_port }}"
   http.port: 9200
   transport.port: "{{ sweagle_elasticsearch_transport_port }}"
-es_log_dir: "/var/log/elasticsearch"
+es_log_dir: "/opt/elasticsearch/log"
 es_api_port: 9200
