--- a/inventories/all-in-one/group_vars/indexservers.yml
+++ b/inventories/all-in-one/group_vars/indexservers.yml
@@ -1,10 +1,12 @@
 es_version: "6.6.2"
 es_data_dirs:
   - "/opt/elasticsearch/data"
+es_log_dir: "/opt/elasticsearch/log"
+es_conf_dir: "/opt/elasticsearch/conf"
+es_pid_dir: "/opt/elasticsearch"
 es_config:
   cluster.name: "{{ sweagle_elasticsearch_cluster }}"
   discovery.seed_hosts: "localhost:{{ sweagle_elasticsearch_transport_port }}"
   http.port: 9200
   transport.port: "{{ sweagle_elasticsearch_transport_port }}"
-es_log_dir: "/opt/elasticsearch/log"
 es_api_port: 9200
