--- a/roles/sweagle/tasks/configure-sweagle-web.yml
+++ b/roles/sweagle/tasks/configure-sweagle-web.yml
@@ -1,18 +1,28 @@
 ---
 - name: Create SWEAGLE web root
   file:
-   path: "/usr/share/nginx/html/sweagle"
-   state: directory
+    path: "/usr/share/nginx/html/sweagle"
+    state: directory
   tags: [ sweagle, sweagle-web ]
 
 - name: Unzip web package
   unarchive:
-   src: "{{ sweagle_installation_folder }}/bin/ui/dist.zip"
-   dest: "/usr/share/nginx/html/sweagle"
+    src: "{{ sweagle_installation_folder }}/bin/ui/dist.zip"
+    dest: "/usr/share/nginx/html/sweagle"
   tags: [ sweagle, sweagle-web ]
 
 - name: Configure web sites available
   template:
-   src: "{{ sweagle_version }}/sites-available/default.j2"
-   dest: "/etc/nginx/sites-available/default"
+    src: "{{ sweagle_version }}/sites-available/default.j2"
+    dest: "/etc/nginx/sites-available/default"
+  become: true
+  tags: [ sweagle, sweagle-web ]
+
+- name: Reconfigure nginx.conf
+  template:
+    src: "{{ sweagle_version }}/nginx.conf.j2"
+    dest: "/etc/nginx/nginx.conf"
+  become: true
+  notify:
+     - Restart nginx
   tags: [ sweagle, sweagle-web ]
